* Added a stumbleupon badge. * Cleaned up some spacing issues.

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 dt {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 ul {
@@ -40,7 +40,7 @@ a {
 }
 
 #ads {
-  margin-top: 4em;
+  /*margin-top: 4em;*/
 }
 
 #copyright {
